# sacloud-random-tools

./: .gitignore  Cargo.toml  README.md
note/: setup.sh
service_script/: root-setup.zsh  user-setup.zsh
src/: api.rs  cmd.rs  main.rs  service_env.rs  service_script.rs  ssh.rs
