[package]
name = "sacloud-random-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.18", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.1"
futures = "0.3.30"
log = "0.4.20"
once_cell = "1.19.0"
openssh = { version = "0.10.3", features = ["native-mux"] }
openssh-sftp-client = "0.14.1"
openssh-sftp-protocol-error = "0.1.0"
public-ip = { version = "0.2.2", features = ["dns-resolver"] }
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
shell-escape = "0.1.5"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "fs"] }
upon = "0.8.0"
url = "2.5.0"
